--- a/FindMissingFile/FindMissingFile.csproj
+++ b/FindMissingFile/FindMissingFile.csproj
@@ -5,10 +5,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PublishAot>true</PublishAot>
+        <InvariantGlobalization>true</InvariantGlobalization>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0"/>
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5"/>
     </ItemGroup>
 
 </Project>
